--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -34,6 +34,11 @@
         <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="frmdb-i-fa-plus"></i></a>
         <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="frmdb-i-fa-trash"></i></a>
     </div>
+    <div class="actions add-elements">
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="choose" href="javascript:void(0)" title="Choose Element"><i class="frmdb-i-fa-hand-pointer"></i></a>
+    </div>
     <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
         <a class="btn" id="italic-btn" href="javascript:void(0)" title="Italic"><i>I</i></a>
