more work in premium icons and images APIs

--- a/fe/src/component-editor/component-editor.component.html
+++ b/fe/src/component-editor/component-editor.component.html
@@ -1,19 +1,19 @@
 <ul class="nav nav-tabs nav-fill flex-nowrap" id="properties-tabs" role="tablist">
     <li class="nav-item content-tab">
         <a class="nav-link active py-1" title="Page Element Content" data-toggle="tab" href="#left-panel-tab-content" role="tab" aria-controls="components" aria-selected="true">
-            <i class="frmdb-i-lg frmdb-i-fa-cube"></i>
+            <i class="fa-lg fa fa-cube"></i>
             Content
         </a>
     </li>
     <li class="nav-item style-tab">
         <a class="nav-link py-1" title="Page Element Style" data-toggle="tab" href="#left-panel-tab-style" role="tab" aria-controls="blocks" aria-selected="false">
-            <i class="frmdb-i-lg frmdb-i-fa-image"></i>
+            <i class="fa-lg fa fa-image"></i>
             Style
         </a>
     </li>
     <li class="nav-item style-tab">
         <a class="nav-link py-1" title="Page Element Data Binding" data-toggle="tab" href="#left-panel-tab-data" role="tab" aria-controls="blocks" aria-selected="false">
-            <i class="frmdb-i-lg frmdb-i-fa-database"></i>
+            <i class="fa-lg fa fa-database"></i>
             Data
         </a>
     </li>
