--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,19 +1,19 @@
 <div class="btn-group mr-3 h-100" role="group">
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
         <button class="btn text-nowrap" title="Choose Color Palette" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="frmdb-i-fa-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
-            <i class="frmdb-i-fa-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
+            <i class="fa fa-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
+            <i class="fa fa-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-color-palette-select">
             <a class="dropdown-item text-nowrap" data-frmdb-table="colors[]">
-                <i class="frmdb-i-fa-square" data-frmdb-attr="style.color::colors[].primary"></i> Primary color 
-                <i class="frmdb-i-fa-square" data-frmdb-attr="style.color::colors[].secondary"></i> Secondary color        
+                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].primary"></i> Primary color 
+                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].secondary"></i> Secondary color        
             </a>
         </div>
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="frmdb-i-fa-font"></i>
+            <i class="fa fa-font"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" style="width: 50vw; height: 50vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
             <div class="card-deck frmdb-cards-wrap-2">
@@ -27,7 +27,7 @@
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="frmdb-i-fa-image"></i>
+            <i class="fa fa-image"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
             <a class="dropdown-item text-nowrap" data-frmdb-theme="- none -" data-frmdb-attr="class.active:noneThemeIsActive">- none -</a>
