--- a/themes/darkly/darkly.scss
+++ b/themes/darkly/darkly.scss
@@ -1,7 +1,7 @@
-    @import '../node_modules/bootswatch/dist/darkly/variables';
+    @import '../../node_modules/bootswatch/dist/darkly/variables';
     @import "../_colors/_color-TBDTBD-TBDTBD.scss";
     @import '../node_modules/bootstrap/scss/bootstrap.scss';
-    @import '../node_modules/bootswatch/dist/darkly/bootswatch';
+    @import '../../node_modules/bootswatch/dist/darkly/bootswatch';
 
     @import '../frmdb/frmdb';
 
