--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -2,9 +2,9 @@
     <div class="modal-dialog mt-3 modal-xl" role="document">
         <div class="modal-content" style="height: 85vh">
             <div class="modal-header">
-                <h5 class="modal-title"><i class="frmdb-i-fa-image"></i> Choose Icon</h5>
+                <h5 class="modal-title"><i class="fa fa-image"></i> Choose Icon</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true"><small><i class="frmdb-i-fa-close"></i></small></span>
+                    <span aria-hidden="true"><small><i class="fa fa-window-close"></i></small></span>
                 </button>
             </div>
             <div class="modal-body h-100 overflow-hidden mb-4">
@@ -26,10 +26,10 @@
                     <div class="tab-pane" id="Paid_Icons" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="d-flex align-items-center">
                             <div class="input-group mb-3">
-                                <input id="frmdb-search-free-icons" type="text" class="form-control"
+                                <input id="frmdb-search-premium-icons" type="text" class="form-control"
                                     placeholder="Search icons: hotels, water sports, beauty, consulting ...">
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class="frmdb-i-fa-search"></i></span>
+                                    <span class="input-group-text"><i class="fa fa-search"></i></span>
                                 </div>
                             </div>
                         </div>
