--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/formuladb-env/icons/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="/formuladb-env/icons/formuladb/icons.css">
 <link rel="stylesheet" href="/formuladb-env/css/_transform.css">
 
@@ -15,7 +16,7 @@
         <div class="elem"></div>
     </div>
     <div class="actions bottom">
-        <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="frmdb-i-fa-plus-circle"></i></a> -->
+        <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="fa fa-plus-circle"></i></a> -->
     </div>
 </div>
 
@@ -23,21 +24,21 @@
 </div>
 <div id="selected" class="box">
     <div class="actions selected">
-        <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="frmdb-i-fa-arrows"></i></a> -->
-        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-180"></i></a>
-        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-90"></i></a>
-        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="frmdb-i-fa-arrow-up"></i></a>
-        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="frmdb-i-fa-arrow-down"></i></a>
-        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="frmdb-i-fa-edit"></i></a>
-        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="frmdb-i-fa-copy"></i></a>
-        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="frmdb-i-fa-plus-circle"></i></a>
-        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="frmdb-i-fa-plus"></i></a>
-        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="frmdb-i-fa-trash"></i></a>
+        <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="fa fa-arrows"></i></a> -->
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="fa fa-level-down-alt fa-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="fa fa-level-down-alt fa-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="fa fa-arrow-up"></i></a>
+        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="fa fa-arrow-down"></i></a>
+        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="fa fa-edit"></i></a>
+        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="fa fa-copy"></i></a>
+        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="fa fa-plus-circle"></i></a>
+        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="fa fa-plus"></i></a>
+        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="fa fa-trash"></i></a>
     </div>
     <div class="actions add-elements">
-        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-180"></i></a>
-        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-90"></i></a>
-        <a class="btn" data-frmdb-action="choose" href="javascript:void(0)" title="Choose Element"><i class="frmdb-i-fa-hand-pointer"></i></a>
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="fa fa-level-down-alt fa-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="fa fa-level-down-alt fa-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="choose" href="javascript:void(0)" title="Choose Element"><i class="fa fa-hand-pointer"></i></a>
     </div>
     <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
