--- a/themes/cosmo/cosmo.scss
+++ b/themes/cosmo/cosmo.scss
@@ -1,6 +1,6 @@
-    @import '../node_modules/bootswatch/dist/cosmo/variables';
+    @import '../../node_modules/bootswatch/dist/cosmo/variables';
     @import "../_colors/_color-TBDTBD-TBDTBD.scss";
     @import '../node_modules/bootstrap/scss/bootstrap.scss';
-    @import '../node_modules/bootswatch/dist/cosmo/bootswatch';
+    @import '../../node_modules/bootswatch/dist/cosmo/bootswatch';
 
     @import '../frmdb/frmdb';
