--- a/themes/flatly/flatly.scss
+++ b/themes/flatly/flatly.scss
@@ -1,4 +1,4 @@
-    @import '../node_modules/bootswatch/dist/flatly/variables';
+    @import '../../node_modules/bootswatch/dist/flatly/variables';
 
     @import "../_colors/_color-TBDTBD-TBDTBD.scss";
 
@@ -6,7 +6,7 @@
     $navbar-dark-hover-color:           rgba($white, .75);
 
     @import '../node_modules/bootstrap/scss/bootstrap.scss';
-    @import '../node_modules/bootswatch/dist/flatly/bootswatch';
+    @import '../../node_modules/bootswatch/dist/flatly/bootswatch';
 
     @import '../frmdb/frmdb';
 
