separate icon font for formuladb editor

--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog mt-3" role="document" style="width: 99vw; max-width: 99vw">
         <div class="modal-content" style="width: 99vw; max-width: 99vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="frmdb-i-lg fa fa-plus-circle"></i> Choose Page Element to Add</p>
+                <p class="modal-title text-primary"><i class="fa fa-plus-circle"></i> Choose Page Element to Add</p>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="fa fa-window-close"></i></small></span>
                 </button>
@@ -10,10 +10,10 @@
             <div class="modal-body">
                 <div id="examples-canvas" class="w-100 position-relative overflow-hidden">
                     <div class="row">
-                        <div id="components-nav" class="col-1 border-right overflow-auto">
+                        <div id="components-nav" class="vh-85 col-2 border-right overflow-auto">
 
                         </div>
-                        <div class="col-11">
+                        <div class="col-10">
                             <iframe class="vh-85" src="/frmdb-platform-apps/themes/index.html"></iframe>
                             <frmdb-highlight-box class="names-hidden"></frmdb-highlight-box>
                         </div>
