--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-font"></i>
+            <i class="frmdb-i-2669552-font"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" style="width: 50vw; height: 50vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
             <div class="card-deck frmdb-cards-wrap-2">
@@ -27,7 +27,7 @@
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-image"></i>
+            <i class="frmdb-i-200559-themes"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
             <a class="dropdown-item text-nowrap" data-frmdb-theme="- none -" data-frmdb-attr="class.active:noneThemeIsActive">- none -</a>
