--- a/themes/frmdb/utilities/_borders.scss
+++ b/themes/frmdb/utilities/_borders.scss
@@ -1,7 +1,24 @@
 @each $size in (1, 2, 3, 4, 5, 6, 7, 8, 9, 10) {
-    .border-#{$size} { border-width: #{$size}px !important; }
-    .border-top-#{$size}    { border-top-width: #{$size}px !important; }
-    .border-right-#{$size}  { border-right-width: #{$size}px !important; }
-    .border-bottom-#{$size} { border-bottom-width: #{$size}px !important; }
-    .border-left-#{$size}   { border-left-width: #{$size}px !important; }
+  .border-#{$size} {
+    border-width: #{$size}px !important;
+  }
+  .border-top-#{$size} {
+    border-top-width: #{$size}px !important;
+  }
+  .border-right-#{$size} {
+    border-right-width: #{$size}px !important;
+  }
+  .border-bottom-#{$size} {
+    border-bottom-width: #{$size}px !important;
+  }
+  .border-left-#{$size} {
+    border-left-width: #{$size}px !important;
+  }
+}
+
+.border-dotted {
+  border-style: dotted;
+}
+.border-dashed{
+    border-style: dashed;
 }
