--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="frmdb-i-200559-themes"></i>
+            <i class="frmdb-i-32227-web-design"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
             <a class="dropdown-item text-nowrap" data-frmdb-theme="- none -" data-frmdb-attr="class.active:noneThemeIsActive">- none -</a>
