--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,14 +1,14 @@
-<link rel="stylesheet" href="/formuladb-env/icons/formuladb/icons.css">
+<link rel="stylesheet" href="/formuladb/icons/frmdb-icons.css">
 
 <div class="formula-code-editor">
     <button id="toggle-formula-editor" class="btn" title="Enable/Disable Formula Editor">
-        <i class="frmdb-i-frmdb"></i>
+        <i class="frmdb-i-0000061-frmdb"></i>
     </button>
     <div class="editor">
       <textarea class="editor-textarea" readonly spellcheck="false"></textarea>
       <div class="editor-formatted-overlay"></div>
     </div>
     <button id="apply-formula-changes" class="btn" disabled title="Apply Changes">
-        <i class="frmdb-i-check-circle"></i>
+        <i class=" frmdb-i-496501-check-mark"></i>
     </button>
 </div>
