more work on icons

--- a/fe/src/data-grid/data-grid-tools.component.html
+++ b/fe/src/data-grid/data-grid-tools.component.html
@@ -20,7 +20,7 @@
                 <li class="nav-item"><a href="#" class="nav-link clone-row "><i class="fa fa-clone"></i> Clone Row</a></li>
                 <li class="nav-item"><a href="#" class="nav-link delete-row "><i class="fa fa-trash"></i> Delete Row</a></li>
                 <li class="nav-divider"></li>
-                <li class="nav-item"><a href="#" class="nav-link excel-export "><i class="fa fa-file-excel-o"></i> Export Excel</a></li>
+                <li class="nav-item"><a href="#" class="nav-link excel-export "><i class="fa fa-file-excel"></i> Export Excel</a></li>
             </ul>
         </div>
         <div class="tab-pane" id="state" role="tabpanel" aria-labelledby="home-tab">
