--- a/fe/src/frmdb-editor/element-tree.component.html
+++ b/fe/src/frmdb-editor/element-tree.component.html
@@ -1,12 +1,12 @@
-<ul>
-    <li><span class="grand-parent" data-frmdb-value="grandParentElName" title="Grandparent Element Box"></span></li>
+<ul class="grand-parent">
+    <li><span data-frmdb-value="grandParentElName" title="Grandparent Element Box">Grandparent Box</span></li>
     <li>
-        <ul>
-            <li><span class="parent" data-frmdb-value="parentElName" title="Parent Element Box"></span></li>
+        <ul class="parent">
+            <li><span data-frmdb-value="parentElName" title="Parent Element Box">Parent Element Box</span></li>
             <li>
                 <ul>
-                    <li><span class="prev" data-frmdb-value="prevName" title="Previous Sibling Element Box"></span></li>
-                    <li><span class="elem" data-frmdb-value="elName" title="Current Element Box"></span></li>
+                    <li data-frmdb-if="hasPrev" class="prev" ><span data-frmdb-value="prevName" title="Previous Sibling Element Box">Previous Sibling Box</span></li>
+                    <li class="elem" ><span data-frmdb-value="elName" title="Current Element Box">Selected Page Element</span></li>
                 </ul>
             </li>
         </ul>
