--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -26,25 +26,41 @@
 <div id="selected" class="box">
     <div class="actions selected">
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="fa fa-arrows"></i></a> -->
-        <a class="btn dropdown frmdb-dropdown-hover" data-frmdb-action="parent" href="javascript:void(0)" title="Select nearby element">
-            <i class="frmdb-i-0000102-hand-point-boxes"></i>
-            <div class="dropdown-menu">
-                <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="fa fa-level-down-alt fa-rotate-180"></i></a>
-                <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="fa fa-level-down-alt fa-rotate-90"></i></a>
+        <div class="btn dropdown frmdb-dropdown-hover" title="Select nearby element">
+            <i class="fa fa-hand-point-up"></i>
+            <div class="dropdown-menu px-2 text-nowrap">
+                <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i
+                        class="fa fa-level-down-alt fa-rotate-180"></i></a>
+                <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i
+                        class="fa fa-level-down-alt fa-rotate-90"></i></a>
             </div>
-        </a>
-        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="fa fa-arrow-up"></i></a>
-        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="fa fa-arrow-down"></i></a>
+        </div>
+        <div class="btn dropdown frmdb-dropdown-hover" title="Move Element">
+            <i class="fa fa-arrows-alt"></i>
+            <div class="dropdown-menu px-2 text-nowrap">
+                <a class="btn" data-frmdb-action="before" href="javascript:void(0)" style="transform: rotate(-45deg);" title="Move element before previous sibling"><i class="fa fa-arrow-up"></i></a>
+                <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up, before parent element"><i class="fa fa-arrow-up"></i></a>
+                <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down, inside next sibling"><i class="fa fa-arrow-down"></i></a>
+                <a class="btn" data-frmdb-action="cut-element" href="javascript:void(0)" title="Cut element"><i class="fa fa-cut"></i></a>
+            </div>
+        </div>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="fa fa-edit"></i></a>
         <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="fa fa-copy"></i></a>
-        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="fa fa-plus-circle"></i></a>
-        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="fa fa-plus"></i></a>
+        <div class="btn dropdown frmdb-dropdown-hover" title="Add Element">
+            <i class="fa fa-plus"></i>
+            <div class="dropdown-menu px-2 text-nowrap">
+                <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="fa fa-plus-circle"></i></a>
+                <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="fa fa-plus"></i></a>
+                <a class="btn" data-frmdb-action="paste-element" href="javascript:void(0)" title="Paste copied element inside"><i class="fa fa-paste"></i></a>
+            </div>
+        </div>
         <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="fa fa-trash"></i></a>
     </div>
     <div class="actions add-elements">
         <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="fa fa-level-down-alt fa-rotate-180"></i></a>
-        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="fa fa-level-down-alt fa-rotate-90"></i></a>
-        <a class="btn" data-frmdb-action="choose" href="javascript:void(0)" title="Choose Element"><i class="frmdb-i-0000101-hand-point-plus-circle"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i
+                class="fa fa-level-down-alt fa-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="choose" href="javascript:void(0)" title="Choose Element"><i class="fa fa-hand-point-up"></i></a>
     </div>
     <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
