more work in icons; fixes for page element editing

--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -64,6 +64,7 @@ $grid-gutter-width:           5px;
 @import "../../../themes/frmdb/utilities/scrollbar";
 @import "../../../themes/frmdb/utilities/background";
 @import "../../../themes/frmdb/utilities/sizing";
+@import "../../../themes/frmdb/tooltip";
 
 .top-panel, .left-panel {
     font-family: $font-family-base;
