--- a/themes/frmdb/_frmdb.scss
+++ b/themes/frmdb/_frmdb.scss
@@ -11,6 +11,7 @@
 @import "./collapse";
 @import "./media";
 @import "./frmdb-editor";
+@import "./tooltip";
 
 .fa {
     font-family: 'Font Awesome 5 Free';
