--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -38,20 +38,21 @@
         <div class="btn dropdown frmdb-dropdown-hover" title="Move Element">
             <i class="fa fa-arrows-alt"></i>
             <div class="dropdown-menu px-2 text-nowrap">
-                <a class="btn" data-frmdb-action="before" href="javascript:void(0)" style="transform: rotate(-45deg);" title="Move element before previous sibling"><i class="fa fa-arrow-up"></i></a>
-                <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up, before parent element"><i class="fa fa-arrow-up"></i></a>
-                <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down, inside next sibling"><i class="fa fa-arrow-down"></i></a>
-                <a class="btn" data-frmdb-action="cut-element" href="javascript:void(0)" title="Cut element"><i class="fa fa-cut"></i></a>
+                <a class="btn" data-frmdb-action="move-before" href="javascript:void(0)" style="transform: rotate(-45deg);" title="Move element before previous sibling"><i class="fa fa-arrow-up"></i></a>
+                <a class="btn" data-frmdb-action="move-up" href="javascript:void(0)" title="Move element up, before parent element"><i class="fa fa-arrow-up"></i></a>
+                <a class="btn" data-frmdb-action="move-down" href="javascript:void(0)" title="Move element down, inside next sibling"><i class="fa fa-arrow-down"></i></a>
+                <a class="btn" data-frmdb-action="cut" href="javascript:void(0)" title="Cut element"><i class="fa fa-cut"></i></a>
             </div>
         </div>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="fa fa-edit"></i></a>
         <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="fa fa-copy"></i></a>
         <div class="btn dropdown frmdb-dropdown-hover" title="Add Element">
             <i class="fa fa-plus"></i>
-            <div class="dropdown-menu px-2 text-nowrap">
+            <div class="dropdown-menu dropdown-menu-right px-2 text-nowrap">
                 <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="fa fa-plus-circle"></i></a>
                 <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="fa fa-plus"></i></a>
-                <a class="btn" data-frmdb-action="paste-element" href="javascript:void(0)" title="Paste copied element inside"><i class="fa fa-paste"></i></a>
+                <a class="btn" data-frmdb-action="paste-inside" href="javascript:void(0)" title="Paste copied element inside"><i class="frmdb-i-0000105-paste-inside"></i></a>
+                <a class="btn" data-frmdb-action="paste-after" href="javascript:void(0)" title="Paste copied element after"><i class="frmdb-i-0000106-paste-after"></i></a>
             </div>
         </div>
         <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="fa fa-trash"></i></a>
