added also move-after action

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -39,6 +39,7 @@
             <i class="fa fa-arrows-alt"></i>
             <div class="dropdown-menu px-2 text-nowrap">
                 <a class="btn" data-frmdb-action="move-before" href="javascript:void(0)" style="transform: rotate(-45deg);" title="Move element before previous sibling"><i class="fa fa-arrow-up"></i></a>
+                <a class="btn" data-frmdb-action="move-after" href="javascript:void(0)" style="transform: rotate(45deg);" title="Move element before previous sibling"><i class="fa fa-arrow-up"></i></a>
                 <a class="btn" data-frmdb-action="move-up" href="javascript:void(0)" title="Move element up, before parent element"><i class="fa fa-arrow-up"></i></a>
                 <a class="btn" data-frmdb-action="move-down" href="javascript:void(0)" title="Move element down, inside next sibling"><i class="fa fa-arrow-down"></i></a>
                 <a class="btn" data-frmdb-action="cut" href="javascript:void(0)" title="Cut element"><i class="fa fa-cut"></i></a>
