--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -14,7 +14,7 @@
 
                         </div>
                         <div class="col-10">
-                            <iframe class="vh-85" src="/frmdb-platform-apps/themes/index.html"></iframe>
+                            <iframe class="vh-85" src="../../frmdb-platform-apps/themes/index.html"></iframe>
                             <frmdb-highlight-box class="names-hidden"></frmdb-highlight-box>
                         </div>
                     </div>
