draft spec working: SSR for look

--- a/themes/basic/basic.scss
+++ b/themes/basic/basic.scss
@@ -1,3 +1,7 @@
+:root {
+    --frmdb-look-name: basic;
+}
+
 @import "../_colors/_color-TBDTBD-TBDTBD.scss";
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
