--- a/themes/lux/lux.scss
+++ b/themes/lux/lux.scss
@@ -2,6 +2,10 @@
 // $border-radius-lg:            .3rem !default;
 // $border-radius-sm:            .2rem !default;
 
+:root {
+    --frmdb-look-name: lux;
+}
+
 @import "../node_modules/bootswatch/dist/lux/variables";
 @import "../_colors/_color-TBDTBD-TBDTBD.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
