--- a/themes/cosmo/cosmo.scss
+++ b/themes/cosmo/cosmo.scss
@@ -1,6 +1,10 @@
-    @import '../../node_modules/bootswatch/dist/cosmo/variables';
-    @import "../_colors/_color-TBDTBD-TBDTBD.scss";
-    @import '../node_modules/bootstrap/scss/bootstrap.scss';
-    @import '../../node_modules/bootswatch/dist/cosmo/bootswatch';
+:root {
+  --frmdb-look-name: cosmo;
+}
 
-    @import '../frmdb/frmdb';
+@import "../../node_modules/bootswatch/dist/cosmo/variables";
+@import "../_colors/_color-TBDTBD-TBDTBD.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../../node_modules/bootswatch/dist/cosmo/bootswatch";
+
+@import "../frmdb/frmdb";
