--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,37 +1,45 @@
 <div class="btn-group mr-3 h-100" role="group">
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
-        <button class="btn text-nowrap" title="Choose Color Palette" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn text-nowrap" title="Choose Color Palette" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
             <i class="fa fa-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-color-palette-select">
-            <a class="dropdown-item text-nowrap" data-frmdb-table="colors[]">
-                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].primary"></i> Primary color 
-                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].secondary"></i> Secondary color        
+            <a class="dropdown-item text-nowrap" data-frmdb-table="colors[]" data-frmdb-attr="href:colors[].urlPathname" data-frmdb-editor-link>
+                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].primary"></i> Primary color
+                <i class="fa fa-square" data-frmdb-attr="style.color::colors[].secondary"></i> Secondary color
             </a>
         </div>
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-        <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             <i class="frmdb-i-2669552-font"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" style="width: 50vw; height: 50vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
             <div class="card-deck frmdb-cards-wrap-2">
-                <frmdb-look-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" 
-                    data-frmdb-table="looks[]" data-frmdb-attr="color::selectedColor.attr" 
-                    data-frmdb-attr2="look::looks[].name"
+                <a  data-frmdb-table="looks[]" data-frmdb-attr="href:looks[].urlPathname" 
+                    class="dropdown-item card p-2 m-2" style="transform: scale(0.85);"
                     data-frmdb-attr3="class.active:looks[].active"
-                    ></frmdb-look-preview>
+                    data-frmdb-editor-link
+                >
+                    <frmdb-look-preview data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="look::looks[].name"></frmdb-look-preview>
+                </a>
             </div>
         </div>
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-        <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
             <i class="frmdb-i-32227-web-design"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
-            <a class="dropdown-item text-nowrap" data-frmdb-theme="- none -" data-frmdb-attr="class.active:noneThemeIsActive">- none -</a>
-            <a class="dropdown-item text-nowrap" data-frmdb-table="themes[]" data-frmdb-value="themes[].name" data-frmdb-attr="data-frmdb-theme:themes[].name" data-frmdb-attr2="class.active:themes[].active"></a>
+            <a class="dropdown-item text-nowrap" data-frmdb-table="themes[]" 
+                data-frmdb-value="themes[].name" data-frmdb-attr="href:themes[].urlPathname"
+                data-frmdb-attr2="class.active:themes[].active"
+                data-frmdb-editor-link
+            ></a>
         </div>
-    </div>    
+    </div>
 </div>
