--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -26,15 +26,6 @@
 <div id="selected" class="box">
     <div class="actions selected">
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="fa fa-arrows"></i></a> -->
-        <div class="btn dropdown frmdb-dropdown-hover" title="Select nearby element">
-            <i class="fa fa-hand-point-up"></i>
-            <div class="dropdown-menu px-2 text-nowrap">
-                <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i
-                        class="fa fa-level-down-alt fa-rotate-180"></i></a>
-                <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i
-                        class="fa fa-level-down-alt fa-rotate-90"></i></a>
-            </div>
-        </div>
         <div class="btn dropdown frmdb-dropdown-hover" title="Move Element">
             <i class="fa fa-arrows-alt"></i>
             <div class="dropdown-menu px-2 text-nowrap">
@@ -45,18 +36,27 @@
                 <a class="btn" data-frmdb-action="cut" href="javascript:void(0)" title="Cut element"><i class="fa fa-cut"></i></a>
             </div>
         </div>
+        <div class="btn dropdown frmdb-dropdown-hover" title="Select nearby element">
+            <i class="fa fa-hand-point-up"></i>
+            <div class="dropdown-menu px-2 text-nowrap">
+                <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i
+                        class="fa fa-hand-point-up"></i></a>
+                <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i
+                        class="fa fa-hand-point-left"></i></a>
+            </div>
+        </div>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="fa fa-edit"></i></a>
-        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="fa fa-copy"></i></a>
+        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="fa fa-trash"></i></a>
         <div class="btn dropdown frmdb-dropdown-hover" title="Add Element">
             <i class="fa fa-plus"></i>
             <div class="dropdown-menu dropdown-menu-right px-2 text-nowrap">
+                <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="fa fa-copy"></i></a>
                 <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="fa fa-plus-circle"></i></a>
                 <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="fa fa-plus"></i></a>
-                <a class="btn" data-frmdb-action="paste-inside" href="javascript:void(0)" title="Paste copied element inside"><i class="frmdb-i-0000105-paste-inside"></i></a>
-                <a class="btn" data-frmdb-action="paste-after" href="javascript:void(0)" title="Paste copied element after"><i class="frmdb-i-0000106-paste-after"></i></a>
+                <a class="btn" data-frmdb-action="paste-inside" href="javascript:void(0)" title="Paste element inside"><i class="frmdb-i-0000105-paste-inside"></i></a>
+                <a class="btn" data-frmdb-action="paste-after" href="javascript:void(0)" title="Paste element after"><i class="frmdb-i-0000106-paste-after"></i></a>
             </div>
         </div>
-        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="fa fa-trash"></i></a>
     </div>
     <div class="actions add-elements">
         <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="fa fa-level-down-alt fa-rotate-180"></i></a>
