--- a/themes/frmdb/_frmdb.scss
+++ b/themes/frmdb/_frmdb.scss
@@ -1,4 +1,3 @@
-// @import "./frmdb/icons";
 @import "./mixins";
 @import "./root";
 @import "./utilities";
@@ -12,6 +11,7 @@
 @import "./media";
 @import "./frmdb-editor";
 @import "./tooltip";
+@import "./icons";
 
 .fa {
     font-family: 'Font Awesome 5 Free';
