--- a/themes/frmdb/_icons.scss
+++ b/themes/frmdb/_icons.scss
@@ -1,39 +1,13 @@
-img[is="frmdb-svg-icon"], img[is="frmdb-svg-icon"].sz-1p2 {
+frmdb-icon, frmdb-icon.sz-1p2 {
     height: 1.2em;
 }
 
-img[is="frmdb-svg-icon"].sz-1p5 {
+frmdb-icon.sz-1p5 {
     height: 1.5em;
 }
 
 @each $size in (1, 2, 3, 4, 5, 6, 7, 8, 9, 10) {
-    img[is="frmdb-svg-icon"].sz-#{$size} { 
+    frmdb-icon.sz-#{$size} { 
         height: $size em;
     }
-}
-
-svg {
-    fill: currentColor;
-    stroke: currentColor;
-}
-
-svg.frmdb-i-fill {
-    stroke-opacity: 0;
-}
-svg.frmdb-i-outline {
-    stroke-opacity: 0;
-}
-svg.frmdb-i-fill-slim {
-    stroke-opacity: 0;
-
-}
-svg.frmdb-i-outline-slim {
-    stroke-opacity: 0;
-
-}
-svg.frmdb-i-fill-thick {
-    stroke-opacity: 1;
-}
-svg.frmdb-i-outline-thick {
-    stroke-opacity: 1;
 }
