--- a/fe/src/icon/icon.component.scss
+++ b/fe/src/icon/icon.component.scss
@@ -1,25 +1,27 @@
-$theme-colors: (
-  "primary": var(--primary),
-  "secondary": var(--secondary),
-  "success": var(--success),
-  "info": var(--info),
-  "warning": var(--warning),
-  "danger": var(--danger),
-  "light": var(--light),
-  "dark": var(--dark)
-);
+// $theme-colors: (
+//   "primary": var(--primary),
+//   "secondary": var(--secondary),
+//   "success": var(--success),
+//   "info": var(--info),
+//   "warning": var(--warning),
+//   "danger": var(--danger),
+//   "light": var(--light),
+//   "dark": var(--dark)
+// );
 
-:host {
-    @each $color, $value in $theme-colors {
-        &.fill-#{$color} svg {
-            fill: $value;
-        }
-    }
-}
+// :host {
+//     @each $color, $value in $theme-colors {
+//         &.fill-#{$color} svg {
+//             fill: $value;
+//         }
+//     }
+// }
 
 svg {
   fill: currentColor;
   stroke: currentColor;
+  width: inherit;
+  height: inherit;
 }
 
 svg.frmdb-i-fill {
