--- a/themes/frmdb/_icons.scss
+++ b/themes/frmdb/_icons.scss
@@ -1,13 +1,16 @@
 frmdb-icon, frmdb-icon.sz-1p2 {
     height: 1.2em;
+    width: 1.2em;
 }
 
 frmdb-icon.sz-1p5 {
     height: 1.5em;
+    width: 1.5em;
 }
 
 @each $size in (1, 2, 3, 4, 5, 6, 7, 8, 9, 10) {
     frmdb-icon.sz-#{$size} { 
-        height: $size em;
+        height: #{$size}em;
+        width: #{$size}em;
     }
 }
